--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,7 @@
     font-family: Roboto, -apple-system, BlinkMacSystemFont, 'Segoe UI', Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;}
 :root{
     --main-blue: #0ea5e9;
+    --main-gray: #e2e8f0;
 }
 .container{
     display: grid;
@@ -13,9 +14,8 @@
     height: 100vh;
 }
 .container > div{
-    /* background-color: aquamarine; */
-    border: 2px solid black;
 }
+/* SIDEBAR */
 .sidebar{
     background-color: var(--main-blue);
     grid-row: 1/3;
@@ -47,11 +47,65 @@
     gap: 15px;
 }
 .sidebar>ul>li{
-    align-self: top;
 }
 .sidebar>ul>li>img{
     margin-right: 10px;
 }
 .sidebar>ul>li:hover{
     cursor: pointer;
+}
+/* HEADER */
+.header{
+    box-shadow: 0px 3px 10px rgba(65, 64, 64, 0.4);
+    padding:20px;
+    padding-left: 50px;
+    padding-right: 50px;
+}
+.search{
+    display: grid;
+    grid-template-columns: auto 1fr auto;
+    gap: 15px;
+    align-items: center;
+}
+input[type="text"]{
+    background-color: var(--main-gray);
+    border-radius: 30px;
+    height: 30px;
+    border: none;
+}
+.user{
+    margin-left:100px;
+    display: grid;
+    gap: 20px;
+    grid-template-columns: 1fr auto auto;
+    align-items: center;
+}
+.userProfile{
+    height: 50px;
+    width: 50px;
+}
+.action{
+    margin-top:20px;
+    display: grid;
+    grid-template-columns: auto 1fr auto auto auto;
+    gap: 20px;
+}
+.userProfile.big{
+    height: 70px;
+    width: 70px;
+}
+.greeting{
+    font-size: 0.8rem;
+}
+.signature{
+    font-size: 1.6rem;
+}
+.action>button{
+    background-color: var(--main-blue);
+    border: none;
+    color: white;
+    font-size: 1.1rem;
+    height: 45px;
+    width: 100px;
+    border-radius: 30px;
 }
