--- a/styles.css
+++ b/styles.css
@@ -17,6 +17,7 @@
 }
 /* SIDEBAR */
 .sidebar{
+    z-index: 2;
     background-color: var(--main-blue);
     grid-row: 1/3;
     padding: 25px;
@@ -56,7 +57,8 @@
 }
 /* HEADER */
 .header{
-    box-shadow: 0px 3px 10px rgba(65, 64, 64, 0.4);
+    z-index: 1;
+    box-shadow: 1px 2px 10px rgba(0, 0, 0, 0.3);
     padding:20px;
     padding-left: 50px;
     padding-right: 50px;
@@ -108,4 +110,8 @@ input[type="text"]{
     height: 45px;
     width: 100px;
     border-radius: 30px;
+}
+/* MAIN CONTENT */
+.content{
+    background-color: var(--main-gray);
 }
